--- a/unc/css/documentStyle.css
+++ b/unc/css/documentStyle.css
@@ -172,7 +172,7 @@ body {
     height: calc(100vh - 100px);
     width: 20%;
     min-width: 250px;
-    padding: 64px;
+    padding: 64px 20px;
     background-color: rgba(20, 20, 20, 0.8);
     border-right: 1px solid #333;
     z-index: 10;
@@ -184,6 +184,7 @@ body {
     margin-bottom: 15px;
     padding-bottom: 5px;
     border-bottom: 1px solid #333;
+    font-size: 1.1em;
 }
 
 .sidebar ul {
@@ -201,6 +202,7 @@ body {
     display: block;
     padding: 5px 30px;
     border-left: 2px solid transparent;
+    font-size: 0.9em;
 }
 
 .sidebar a:hover {
@@ -211,7 +213,9 @@ body {
 .sidebar-footer {
     margin-top: 30px;
     padding-top: 15px;
+    padding-left: 5px;
     border-top: 1px solid #333;
+    font-size: 0.9em;
 }
 
 .main-content {
@@ -227,8 +231,8 @@ body {
     top: 110px;
     height: calc(100vh - 100px);
     width: 20%;
-    min-width: 250px;
-    padding: 64px;
+    min-width: 250px;    
+    padding: 64px 20px;
     background-color: rgba(20, 20, 20, 0.8);
     border-left: 1px solid #333;
     z-index: 10;
@@ -305,7 +309,8 @@ body {
     margin-top: 20px;
     padding-top: 15px;
     border-top: 1px solid #333;
-    font-size: 0.8em;
+    padding-left: 5px;
+    font-size: 0.9em;
 }
 
 .object-header {
@@ -385,7 +390,7 @@ body {
 }
 
 .containment-box {
-    border-left: 5px solid #4b0082;
+    border-left: 5px solid #6c0082;
 }
 
 .meta-header {
@@ -419,7 +424,7 @@ body {
 }
 
 .containment-level {
-    background-color: #4b0082;
+    background-color: #6c0082;
     color: white;
 }
 
