--- a/unc/css/documentStyle.css
+++ b/unc/css/documentStyle.css
@@ -520,6 +520,16 @@ body {
     line-height: 1.8;
 }
 
+.citations p.heading {
+    font-weight: bold;
+    color: #d8d8d8;
+}
+
+.citations p.remarks {
+    font-style: italic;
+    color: #666666;
+}
+
 .warning {
     color: #ff4500;
     font-weight: bold;
