Update storage section and list styling
Removed unnecessary bold tags and added a line break in the storage section of unc-1648.html. Improved list indentation in .content-section by updating CSS for ul and pl elements.

--- a/unc/css/documentStyle.css
+++ b/unc/css/documentStyle.css
@@ -463,6 +463,10 @@ body {
     position: relative;
 }
 
+.content-section ul, .content-section pl {
+    margin-left: 32px;
+}
+
 .content-section::before {
     content: "";
     position: absolute;
